<resources>
    <string name="app_name">AMClient</string>
    <string name="app_name_with_rights">Copyright © 2018 sawatariyuki@NTS. All rights reserved.</string>
    <string name="studio_name">New-Type STUDIO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="state">state:</string>
    <string name="title_activity_login">Sign in</string>

    <!--left drawer-->
    <string name="inactivate">Account is inactivated\nCheck your email box</string>
    <string name="joined">Joined</string>
    <string name="last_seen">Last seen</string>

    <!--home activity-->
    <string name="no_event_data">There is no event data.</string>
    <string name="start_arrangement">▶</string>
    <string name="state_selector_title">SELECT AN EVENT STATE</string>
    <string name="add">＋</string>
    <string name="delete">Delete</string>
    <string name="me">me!</string>

    <!--login activity-->
    <string name="username">Username</string>
    <string name="username_hint">input your username</string>
    <string name="password">Password</string>
    <string name="password_hint">input your password</string>
    <string name="remember">Lazy</string>

    <!--register activity-->
    <string name="password_confirm">Again</string>
    <string name="password_confirm_hint">input password again</string>
    <string name="email">Email</string>
    <string name="email_hint">input your email</string>
    <string name="cancel">Cancel</string>

    <!--add event activity-->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="emergency">Emergency</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="title_hint">input event title</string>
    <string name="description_hint">input event description</string>
    <string name="start_time_hint">choose a start time</string>
    <string name="end_time_hint">choose an end time</string>
    <string name="length_hint">minutes</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="add_event_info">Add Event</string>

    <!--add event type activity-->
    <string name="add_type_info">Add Event Type</string>
    <string name="use_times">Use times:</string>
    <string name="ctime">Create:</string>
    <string name="last_used">Last used:</string>
    <string name="type_name">Name</string>
    <string name="type_name_hint">input a type name</string>
    <string name="no_type_data">There is no type data.</string>

    <!--update event activity-->
    <string name="update">UPDATE</string>
    <string name="cancel_">CANCEL</string>
    <string name="reactive_">REACTIVE</string>
    <string name="delete_">DELETE</string>
    <string name="recommend_time">Recommend</string>
    <string name="to">To</string>
    <string name="create">Create</string>
    <string name="event_detail">Event Detail</string>

    <!--user info activity-->
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="birthplace">Birthplace</string>
    <string name="address">Address</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="weight_hint">kg</string>

    <!--user log activity-->
    <string name="operation">Operation:</string>
    <string name="log_time">Time:</string>
    <string name="ip">ip:</string>
    <string name="no_log_data">There is no log data.</string>
    <string name="log_info">Logs</string>

    <!--settings activity-->
    <string name="settings_exit">Logout</string>
    <string name="clear_data">Clear data</string>
</resources>
